# cookiecutter-polars-plugins

./: .gitignore  README.md  cookiecutter.json  test_it.sh
.github/workflows/: test.yml
{{ cookiecutter.project_slug }}/: .gitignore  Cargo.toml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  run.py  rust-toolchain.toml
{{ cookiecutter.project_slug }}/.github/workflows/: publish_to_pypi.yml
{{ cookiecutter.project_slug }}/src/: expressions.rs  lib.rs  utils.rs
{{ cookiecutter.project_slug }}/tests/: test_pig_latinnify.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  _internal.pyi  typing.py  utils.py
