[package]
name = "{{ cookiecutter.project_slug.replace('_', '-') }}"
version = "0.1.0"
edition = "2021"

[lib]
name = "{{ cookiecutter.project_slug }}"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.22.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.49.1", default-features = false }
polars-arrow = { version = "0.49.1", default-features = false }

